<resources>
    <string name="app_name">swoosh</string>
    <string name="background_image">background image</string>
    <string name="logo">logo</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_amp_dominate_the_league"><![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="next">Next</string>
    <string name="league_background">league background</string>
    <string name="desired_league">Desired League:</string>
    <string name="toggleButton">ToggleButton</string>
    <string name="mens">MENS</string>
    <string name="womens">WOMENS</string>
    <string name="co_ed">CO-ED</string>
    <string name="i_am_a">I am a:</string>
    <string name="begginer">Begginer</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="looking_for_background">looking for background</string>
    <string name="welcome_background">welcome background</string>
    <string name="finish_background">finish background</string>
</resources>
